# MIPT-all

./: .gitignore  .gitmodules  AVLTree.h  CMakeLists.txt  Calc.cpp  CartesianTree.h  Deque.h  File.cpp  File.h  Graph.h  GraphTraversal.h  HashTable.h  HeapForMerge.cpp  HeapForMerge.h  ITree.h  ImplicitCartesianTree.cpp  ImplicitCartesianTree.h  ImplicitSplayTree.cpp  ImplicitSplayTree.h  ImplicitTree.h  K-IMPROV.ipynb  Makefile  MeldableHeap.h  Prac.h  PtrOwner.h  README  README.md  Readme.txt  SkewHeap.h  SortedListFromFile.cpp  SortedListFromFile.h  Sorts.h  SplayTree.h  Table.h  Untitled.ipynb  Vector.h  Work.sln  akos-lectures.tex  akos-seminars.tex  akos.tex  (+17 more)
1/: CMakeLists.txt  main.c
2/: CMakeLists.txt  main.c  utils.h
3/: BlockingQueue.h  CMakeLists.txt  Queue.h  ThreadPool.h  analysis.ipynb  main.c  packaged_task.c  packaged_task.h  packaged_task_pre.c  parmergesort.h  queue_impl.h  unittest.c
4/: BlockingQueue.c  BlockingQueue.h  BlockingQueue_univ.h  CMakeLists.txt  ParallelQuickSort.h  Population.c  Population.h  Queue.h  ThreadPool.c  ThreadPool.h  Tour.c  Tour.h  main.c  packaged_task.h  parmergesort.h  queue_impl.c  queue_impl.h  unittest.c  utils.h
5/: CMakeLists.txt  communicating.c  main.c  vector_impl.c  vector_impl.h  walking.c  walking.h
6/: makefile  walking.c  walking.h
7/: makefile  run  stats.txt
ACM/: A.h  B-Olymp.h  B.cpp  BaseTask.h  C.cpp  CMakeLists.txt  D.h  DinicOnAdjacencyLists.h  E-Olymp.h  E.cpp  G-Olymp.h  G.h  H.cpp  H.h  Hungary.h  I-Olymp.h  J-Olymp.h  K-Kuhn.cpp  K-Kuhn.h  K.cpp  MinCostOnDijkstra.h  MinCostOnIterators.h  min_cost_max_flow.h
ACOS/: README
Algo/: CMakeLists.txt  judgemaker.py  stdafx.cpp
Algo/LockFree/: CMakeLists.txt  QueueWithHazardPointers.cpp  QueueWithHazardPointers.h  QueueWithIdleDelete.h  QueueWithReferenceCounting.h  QueueWithoutSmr.h  hazard_pointer.h  queue_test.cpp
Algo/MoreFlows/: A.h  B.h  CMakeLists.txt  CostNetwork.h  E.h  G.cpp  H.cpp  Hungary.h  I.h  J.cpp  J.h  JTest.cpp  K-Hungary.cpp  MinCostFordBellman.h  NetworkOnAdjacencyLists.h  min_cost_flow.h
Algo/Strings/: AhoCorasick.h  B.h  C.cpp  C.h  CMakeLists.txt  D.h  E.cpp  G-old.h  G.cpp  H.cpp  H.h  I.h  J.cpp  J.h  L.cpp  M.cpp  M.h  MyException.h  StringHashes.h  SuffixArrayBad.h  SuffixAutomaton.h  TestSuffixArray.cpp
BinarySearchTrees/: AVLTree.h
ExternalSort/: File.cpp  HeapForMerge.cpp
FA/: header.tex
FL/: CMakeLists.txt
FL/conspects/: SLR.tex
FL/tex/: boilerplate.tex  header.tex  makefile  t1.tex  t2.tex
FSM/: FSM.cpp  FSM.h
Flow/: BadParquet.cpp  CMakeLists.txt  Dinic.h  Graph.h  Hamming.cpp  Hamming.h  Hopcroft-Karp.h  IGraph.h  Network.h  NewNetwork.h  bad_parquet.cpp  bad_parquet.h  birthday.cpp  birthday.h  changing_flow.cpp  changing_flow.h  dinic.h  edmonds_karp.h  hamming.h  hamming_test.cpp  maximal_flow.cpp  maximal_flow.h  very_changing_flow.h
Flow/tests/: inHamming0.txt
Graph/: Graph.h  GraphTests.h  GraphTraversal.h
GraphTasks/: TradeArbitrage.h
HashTables/: HashTable.h
ImplicitTrees/: ImplicitCartesianTree.cpp  ImplicitCartesianTree.h  ImplicitSplayTree.cpp  ImplicitTree.h
LockFree/: CMakeLists.txt  QueueWithIdleDelete.cpp  QueueWithIdleDelete.h  QueueWithReferenceCounting.cpp  QueueWithoutSmr.cpp  QueueWithoutSmr.h  RefCountingQueue.cpp  RefCountingQueue.h  barrier.h  lock_free_queue.cpp  lock_free_queue.h
MCS/: analysis.ipynb  test
MoreFlows/: A.cpp  C.h  D.cpp  I.cpp  K-Hungary.h  K.h  L.cpp  L.h
Other/: Sorts.h
Parallel/: CMakeLists.txt  ID.h  StepRobot.h  semaphore.h  tree_mutex.h
ParallelWorkers/: CMakeLists.txt  parallel_sort_with_vector_swaps.h  thread_pool.h  thread_safe_queue.h
Prac1/: Prac.cpp
Python/: python_3.ipynb  python_4.ipynb  python_5.ipynb  python_6.ipynb
StandardDataStructures/: Deque.h  DequeTests.cpp  MinMaxHeap.h  MinMaxHeapTests.cpp  Vector.h  VectorTests.cpp
Strings/: B.cpp  B.h  D.cpp  E.h  G.h  I.cpp  K.cpp  K.h  L.h  StringFunctions.h  SuffixArray.h
StructuresForMassModification/: SparseTable.h
Work/: AVLTree.h  AVLTreeTests.h  BinarySearchTree.h  BinomialHeap.h  Brackets.cpp  Calc.cpp  Calc.h  CalcJudge.cpp  CalcTests.cpp  CalcTests.h  CartesianTree.h  CartesianTreeTests.h  ChainHashTable.cpp  ChainHashTable.h  Deque.cpp  Deque.h  DequeTests.cpp  DequeTests.h  ExternalSort.cpp  ExternalSort.h  ExternalSortTests.cpp  File.cpp  File.h  HashTable.h  Heap.cpp  Heap.h  HeapForMerge.cpp  HeapForMerge.h  HeapTests.cpp  HeapTests.h  LeftistHeap.h  MeldableHeap.h  MeldableHeapTests.cpp  MeldableHeapTests.h  MinMaxHeap.h  MinMaxHeapTests.cpp  MinMaxHeapTests.h  OpenAddressHashTable.cpp  OpenAddressHashTable.h  OpenAddressHashTableTests.cpp  (+44 more)
Zachet/: sorted_list.h  ticket_spinlock.h
ZachetParallels/: recursive_mutex.h
common/: BitManipulations.h  Makefile  manipulations.c  manipulations.h  manipulations.h.gch  utils.c  utils.h
conspects/: 3.md  akos-lectures.tex
conspects-lecture/: boilerplate.tex  header.tex  lectures-distributed.tex  lectures-parallel.tex  lectures.tex  makefile
mapred/: mapper.py  mapreduce  reducer.py
mssql/: 1.sql  2.sql  3-get_pictures_by_tag.sql  3-get_user_uploaded_artists.sql  3.sql  5-most_popular_by_uploads_artist.sql  5-trigger-function.sql  5.sql  6-most_popular_by_watches_artist.sql  6.sql  7-get_pictures_watched_not_reposted.sql  7.sql  8-updatable_view.sql  9-dynamical_generation.sql  all.sql  create_tables.sql  create_types.sql  crud-c.sql  crud-r.sql  crud-u.sql  drop.sql  everything.sh  fmtstrs.py  populate.py  triggers-create.sql  updatable_view.sql  view-artist_stat-task7.sql
oracle/: 1-create_tables.sql  1-drop.sql  3-get_pictures_watched_not_reposted.sql  4-crud-r.sql  5-trigger-function.sql  6-trigger-author_name.sql
prak2/: solution.ipynb
seminars-tasks/: sem17.03.16.c  sem25.03.16.c
src/: K-IMPROV.ipynb
task-0/: main.c
task-1/: BitCoding.c  BitCoding.h  main.c
task-amp/: Makefile  common_types.h  error_stuff.c  error_stuff.h  net_stuff.c  net_stuff.h  server.c  server_action_stuff.c  server_action_stuff.h  server_stuff.c  server_stuff.h  timer_stuff.c  timer_stuff.h  utils.c  (+1 more)
(+452 files in other folders)
