add_executable(H BaseTask.h H.h H.cpp Hungary.h)
add_executable(A BaseTask.h A.h A.cpp MinCostOnIterators.h)
add_executable(D BaseTask.h D.h D.cpp)
add_executable(B BaseTask.h B.h B.cpp ../Flow/Dinic.h ../Flow/Network.h)
add_executable(J BaseTask.h J.h J.cpp MinCostFordBellman.h)
add_executable(JTest JTest.cpp J.h min_cost_max_flow.h min_cost_flow.h)
add_executable(G BaseTask.h G.h G.cpp MinCostFordBellman.h)
target_link_libraries(JTest ${Boost_LIBRARIES})
add_executable(E BaseTask.h E.h E.cpp )
add_executable(I BaseTask.h I.h I.cpp MinCostOnDijkstra.h)
add_executable(C BaseTask.h C.h C.cpp)
add_executable(L BaseTask.h L.h L.cpp)
add_executable(K BaseTask.h K.h K.cpp MinCostOnDijkstra.h)
add_executable(K_Hungary BaseTask.h K-Hungary.h K-Hungary.cpp)
add_executable(K_Kuhn BaseTask.h K-Kuhn.h K-Kuhn.cpp)
