add_executable(Strings_G G.h G.cpp MyException.h)
add_executable(Strings_H H.h H.cpp)
add_executable(Strings_C C.h C.cpp SuffixArray.h StringHashes.h)
add_executable(Strings_K K.h K.cpp)
add_executable(Strings_E E.h E.cpp)
add_executable(Strings_B B.h B.cpp)
add_executable(Strings_J J.h J.cpp AhoCorasick.h)
add_executable(Strings_I I.h I.cpp AhoCorasick.h)
add_executable(Strings_M M.h M.cpp)
add_executable(Strings_L L.h L.cpp SuffixAutomaton.h)
add_executable(Strings_TestSuffixArray TestSuffixArray.cpp SuffixArray.h)
add_executable(Strings_D D.h D.cpp)
